--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<title>DJ Choudhary Entertainment</title>
 </head>
 <body>
+	<style>
+		.content-grid-overlay-item:hover .thumb-preview{display: block; opacity: 1;}
+		.thumb-preview{display: none;}
+	</style>
 <div class='content-grid-overlay-item' style="position: relative">
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhB-CF3SwenMJQKfifg4O_dYc4B736HT9ujilQD3K770Qid0EaYAOyatiyYNYCwzHdB6eE_MuwSDBcis27JzV8DLuvD2MWzJ0GeCYbz32waGupg3CrqFYyDwp-sCtInOqu85tBX59C-neKgo7Nx5pmcjLO-58_FpFM_E8owcg9Nw9P0v5mXyQaGPwDUEbqI/s1600/vixen-051624-ru-re_1920x1080.jpg" style='height:auto;position: relative' width='640' />
 <video autoplay='' class='thumb-preview' id='replace' loop='' muted='' playsinline='' preload='auto' src='https://huggingface.co/datasets/unavailableshorts/Videos/resolve/main/vixen/natural-beauty-rides-his-big-cock_353P.mp4' style="position: absolute;object-fit: cover;top: 0; opacity: 0; transition: 0.3s all;" />
