--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<style>
-		.content-grid-overlay-item:hover .thumb-preview{display: block; opacity: 1;}
+		.content-grid-overlay-item img:hover .thumb-preview{display: block; opacity: 1;}
 		.thumb-preview{display: none;}
 	</style>
 <div class='content-grid-overlay-item' style="position: relative">
