--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<style>
-		.content-grid-overlay-item img:hover .thumb-preview{display: block; opacity: 1;}
 		.thumb-preview{display: none;}
+		.content-grid-overlay-item img:hover .thumb-preview{display: block !important; opacity: 1 !important;}
 	</style>
 <div class='content-grid-overlay-item' style="position: relative">
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhB-CF3SwenMJQKfifg4O_dYc4B736HT9ujilQD3K770Qid0EaYAOyatiyYNYCwzHdB6eE_MuwSDBcis27JzV8DLuvD2MWzJ0GeCYbz32waGupg3CrqFYyDwp-sCtInOqu85tBX59C-neKgo7Nx5pmcjLO-58_FpFM_E8owcg9Nw9P0v5mXyQaGPwDUEbqI/s1600/vixen-051624-ru-re_1920x1080.jpg" style='height:auto;position: relative' width='640' />
