--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="all.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>DJ Choudhary Entertainment</title>
-
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css' rel='stylesheet'/>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css' rel='stylesheet'/>
+    <script src='https://code.jquery.com/jquery-3.7.1.js'/>
+    <script src='http://code.jquery.com/jquery-2.1.3.min.js'/>
+    <script src='http://botmonster.com/jquery-bootpag/jquery.bootpag.js' type='text/javascript'/>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js'/>
 	<style>
 		.container::after, .float-container::after {display: none;}
 .section,.widget{margin:0px;}
@@ -3029,5 +3034,24 @@ $('.'+homelink).html(finalname);
 </div>
 </div>
 </div>
+<script>  
+$(document).ready(function(){
+  $(".hover-thumb").hover(
+    function() {
+  	$(this).children('video').show();
+  	$(this).children('video').css('opacity','1');
+      $(this).children("video").get(0).play();
+    }, function() {
+  		$(this).children('video').css('z-index','0');
+  		$(this).children('video').css('opacity','0');
+       $(this).children("video").get(0).pause();
+    });
+    
+$('.navbar-toggler').click(function(){
+  $('#main_nav').slideToggle(); 
+});
+    
+});
+</script>
 </body>
 </html>
